Update Nginx config for domain www.aifahaocare.com

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;  # 匹配所有域名/IP
+    server_name www.aifahaocare.com aifahaocare.com;
 
     # 前端静态文件
     location / {
